<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pro.soft.inzi.mapapp11.MapMain"
    tools:showIn="@layout/activity_map_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountHandle"
        android:id="@+id/accountHandle"
        android:textSize="20sp"
        android:layout_marginTop="55sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accountPassword"
        android:id="@+id/accountPassword"
        android:textSize="20sp"
        android:layout_below="@+id/handleText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:hint="User Password"
        android:layout_below="@+id/handleText"
        android:layout_alignLeft="@+id/handleText"
        android:layout_alignStart="@+id/handleText"
        android:layout_alignRight="@+id/handleText"
        android:layout_alignEnd="@+id/handleText" />

    <EditText
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:id="@+id/handleText"
        android:hint="User Handle"
        android:layout_alignTop="@+id/accountHandle"
        android:layout_toRightOf="@+id/accountHandle"
        android:layout_toEndOf="@+id/accountHandle"
        android:layout_marginLeft="35sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_marginTop="38dp"
        android:onClick="onLogin"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/passwordText"
        android:layout_alignLeft="@+id/passwordText"
        android:layout_alignStart="@+id/passwordText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createAccount"
        android:id="@+id/textView2"
        android:layout_below="@+id/loginButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        android:textColor="#0c31d6"
        android:onClick="onCreateNew"
        android:clickable="true"
        android:password="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/loginIntro"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>