<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrendieProfile"
    tools:showIn="@layout/activity_map_main"
    android:id="@+id/parentLayout">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedTab"
        android:id="@+id/feedTab"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="loadTrends"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileTab"
        android:id="@+id/profileTab"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight=".33"
        android:background="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/trendingTab"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:onClick="onLogout" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/profilePic"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/feedTab"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:shape="oval"
        android:src="@drawable/profilepic"
        android:clickable="true"
        android:onClick="onClick" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/handle"
        android:id="@+id/handle"
        android:paddingLeft="5sp"
        android:paddingStart="5sp"
        android:paddingEnd="0sp"
        android:paddingRight="0sp"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/profilePic"
        android:layout_toEndOf="@+id/profilePic" />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="400sp"
        class="com.google.android.gms.maps.SupportMapFragment"
        android:layout_below="@+id/profilePic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView"
        android:singleLine="true"
        android:autoText="false"
        android:background="#000000"
        android:layout_below="@+id/feedTab"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/lineAfterMap"
        android:singleLine="true"
        android:autoText="false"
        android:background="#000000"
        android:layout_below="@+id/map"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5sp" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/name"
        android:layout_alignTop="@+id/profilePic"
        android:layout_toRightOf="@+id/profilePic"
        android:layout_toEndOf="@+id/profilePic"
        android:paddingLeft="5sp"
        android:paddingRight="0sp"
        android:text="@string/name" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="300sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/lineAfterMap"
        android:layout_marginTop="15sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/scrollView"
        android:foregroundGravity="center_horizontal"
        android:background="#989898">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/linearLayout">

            <ImageView
                android:layout_width="303dp"
                android:layout_height="300dp"
                android:id="@+id/imageView"
                android:layout_alignBottom="@+id/scrollView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="87dp"
                android:foregroundGravity="center_horizontal"
                android:src="@drawable/trendieicon"
                android:background="#a5a5a5"
                android:clickable="true"
                android:onClick="showAddress"
                android:visibility="gone" />

            <ImageView
                android:layout_width="303dp"
                android:layout_height="300dp"
                android:id="@+id/imageView2"
                android:layout_alignBottom="@+id/scrollView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="87dp"
                android:foregroundGravity="center_horizontal"
                android:background="#a5a5a5"
                android:clickable="true"
                android:onClick="showAddress"
                android:visibility="gone" />

            <ImageView
                android:layout_width="303dp"
                android:layout_height="300dp"
                android:id="@+id/imageView3"
                android:layout_alignBottom="@+id/scrollView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="87dp"
                android:foregroundGravity="center_horizontal"
                android:background="#a5a5a5"
                android:clickable="true"
                android:onClick="showAddress"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:id="@+id/upload"
        android:layout_below="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:nestedScrollingEnabled="false"
        android:onClick="onClick" />


</RelativeLayout>