<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Feed_Activity"
    tools:showIn="@layout/activity_map_main">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedTab"
        android:id="@+id/feedTab"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="loadTrends"
        android:background="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profileTab"
        android:id="@+id/profileTab"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_weight=".33"
        android:onClick="loadProfile"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/trendingTab"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:onClick="onLogout" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="2sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView5"
        android:singleLine="true"
        android:autoText="false"
        android:background="#000000"
        android:layout_below="@+id/feedTab"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:fillViewport="false"
        android:onClick="onLogout"
        android:clickable="false"
        android:layout_below="@+id/feedTab">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:paddingTop="10sp"
            android:id="@+id/profileImage"
            android:src="@drawable/profilepic"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/profile_image_label"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameLayout"
            android:layout_gravity="center"
            android:text="@string/name"
            android:textColor="#0b0a0a"
            android:textStyle="bold"
            android:paddingRight="5sp"
            android:paddingLeft="5sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="400sp"
            android:layout_height="300sp"
            android:src="@drawable/parkimage"
            android:id="@+id/parkImage"
            android:layout_gravity="center"
            android:onClick="onLike"
            android:clickable="true"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Likes: 0"
            android:id="@+id/likes"
            android:visibility="gone" />

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:id="@+id/profileImage_1"
            android:src="@drawable/profilepic"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameLayout_1"
            android:text="@string/name"
            android:textColor="#0b0a0a"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingRight="5sp"
            android:paddingLeft="5sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="400sp"
            android:layout_height="300sp"
            android:layout_gravity="center"
            android:src="@drawable/parkimage"
            android:id="@+id/parkImage_1"
            android:clickable="true"
            android:onClick="onLike"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Likes: 0"
            android:id="@+id/likes1"
            android:visibility="gone" />

        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:id="@+id/profileImage2"
            android:src="@drawable/profilepic"
            android:layout_gravity="center_horizontal"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameLayout2"
            android:text="@string/name"
            android:textColor="#0b0a0a"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingRight="5sp"
            android:paddingLeft="5sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="400sp"
            android:layout_height="300sp"
            android:layout_gravity="center"
            android:src="@drawable/parkimage"
            android:id="@+id/parkImage2"
            android:clickable="true"
            android:onClick="onLike"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Likes: 0"
            android:id="@+id/likes2"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
</RelativeLayout>
